--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
+    "cors": "^2.8.5",
     "eslint": "^7.2.0",
     "express": "^4.17.1",
     "jest": "^26.0.1",
