--- a/challenges/test/build.gradle
+++ b/challenges/test/build.gradle
@@ -1,1 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+tasks.withType(Test){
+  scanForTestClasses = false
+  include "**/*Test.class"
+}
