--- a/challenges/test/lib/build.gradle
+++ b/challenges/test/lib/build.gradle
@@ -14,17 +14,21 @@ plugins {
 repositories {
     // Use JCenter for resolving dependencies.
     jcenter()
+  maven {
+    url 'https://repo.maven.apache.org/maven2'
+    name 'Maven Central'
+  }
 }
 
 dependencies {
-    implementation 'org.jetbrains:annotations:20.1.0'
+    implementation 'org.jetbrains:annotations:22.0.0'
 
     // Use JUnit test framework.
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.2'
 
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     api 'org.apache.commons:commons-math3:3.6.1'
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
-    implementation 'com.google.guava:guava:29.0-jre'
+    implementation 'com.google.guava:guava:30.1.1-jre'
 }
