--- a/challenges/test/lib/build.gradle
+++ b/challenges/test/lib/build.gradle
@@ -31,4 +31,8 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:30.1.1-jre'
+
+  // https://mvnrepository.com/artifact/org.codehaus.guessencoding/guessencoding
+  implementation group: 'org.codehaus.guessencoding', name: 'guessencoding', version: '1.4'
+
 }
